@@ -4,6 +4,8 @@ v1.1.4
 	Bugfixes:
 		- Finished abrupt migration to reshape2. As a result fixed a bug in which 'cast' was still required for several functions and could not be found. Now appropriately using 'dcast' or 'acast'.
 		- Fixed minor bug in CuffFeature::fpkmMatrix
+		- Fixed minor bug in database setup that caused instability with cuffdiff --no-diff argument.
+		- Fixed bug in csDendro method for CuffData objects.
 		
 v1.1.3 
 	New Features:
